--- a/.gitignore
+++ b/.gitignore
@@ -31,3 +31,11 @@ __pycache__
 
 # Emacs automated backup files
 *~/
+.vscode/launch.json
+.gitignore
+testFolder/
+/.emacs.desktop
+/.emacs.desktop.lock
+/pelicun/coverage.xml
+.cov2emacs.log
+flycheck*.py
